--- a/SourceCode/CardIdleRemastered/Properties/Resources.ru-Ru.resx
+++ b/SourceCode/CardIdleRemastered/Properties/Resources.ru-Ru.resx
@@ -174,6 +174,9 @@
   <data name="DequeueHeader" xml:space="preserve">
     <value>Убрать</value>
   </data>
+  <data name="DownloadRelease" xml:space="preserve">
+    <value>Перейти к GitHub</value>
+  </data>
   <data name="DynGridHeaders" xml:space="preserve">
     <value>Заголовок таблицы</value>
   </data>
@@ -257,6 +260,9 @@
   </data>
   <data name="Minutes" xml:space="preserve">
     <value>мин</value>
+  </data>
+  <data name="NewRelease" xml:space="preserve">
+    <value>Доступно обновление</value>
   </data>
   <data name="NextSync" xml:space="preserve">
     <value>Синхронизация</value>
