--- a/SourceCode/CardIdleRemastered/Properties/Resources.ru-Ru.resx
+++ b/SourceCode/CardIdleRemastered/Properties/Resources.ru-Ru.resx
@@ -342,11 +342,14 @@
   <data name="Stop" xml:space="preserve">
     <value>Стоп</value>
   </data>
+  <data name="SyncBadges" xml:space="preserve">
+    <value>Обновить список значков</value>
+  </data>
   <data name="TimeIdleHeader" xml:space="preserve">
     <value>Время в игре</value>
   </data>
   <data name="Title" xml:space="preserve">
-    <value>Card Idle</value>
+    <value>Card Idle v{0}</value>
   </data>
   <data name="ToolIdleMode" xml:space="preserve">
     <value>Режим</value>
